# davinci-templates

./: .gitignore
backend/go-rest-api/: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  go.mod
backend/node-hono-api/: Dockerfile  README.md  drizzle.config.ts  package.json
backend/python-fastapi/: .gitignore  Dockerfile  README.md  pyproject.toml
backend/python-fastapi/src/: config.py  database.py  main.py  models.py
nextjs/nextjs-3d-card/: package.json
nextjs/nextjs-admin-dashboard/: README.md  package.json
nextjs/nextjs-ai-assistant/: README.md  package.json
nextjs/nextjs-ai-chat/: README.md  package.json
nextjs/nextjs-ai-image-gen/: README.md  package.json
nextjs/nextjs-ai-translator/: README.md  package.json
nextjs/nextjs-analytics-dashboard/: README.md  package.json
nextjs/nextjs-api-playground/: README.md  package.json
nextjs/nextjs-auction/: README.md  package.json
nextjs/nextjs-auth-starter/: README.md  package.json
nextjs/nextjs-beta-access/: package.json
nextjs/nextjs-blog/: README.md  package.json
nextjs/nextjs-booking/: .gitignore  README.md  package.json
nextjs/nextjs-checkout-form/: package.json
nextjs/nextjs-collab-editor/: package.json
nextjs/nextjs-crm/: README.md  package.json
nextjs/nextjs-digital-products/: README.md  package.json  tailwind.config.ts
nextjs/nextjs-docs-site/: README.md  package.json
nextjs/nextjs-drawing-canvas/: package.json
nextjs/nextjs-early-bird/: package.json
nextjs/nextjs-email-client/: README.md  package.json
nextjs/nextjs-event-platform/: README.md  (+1 more)
(+359 files in other folders)
